# epoch-telemetry-analysis

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
src/api/: pyproject.toml
src/api/api/: main.py
src/api/api/dependencies/: __init__.py  api_key.py  core.py  machine.py
src/api/api/exceptions/: __init__.py  handlers.py
src/api/api/middlewares/: __init__.py  cors_middleware.py
src/api/api/routes/: __init__.py
src/api/api/routes/v1/: __init__.py  api_key.py  machine.py
src/api/api/schemas/: __init__.py  pagination.py
src/api/api/shared/: __init__.py  config.py  logging.py
src/engine/: pyproject.toml
src/engine/engine/: config.py
src/engine/engine/application/: api_key_service.py  machine_service.py
src/engine/engine/database/: __init__.py
src/engine/engine/database/cache/: __init__.py  interfaces.py  manager.py
src/engine/engine/database/event/: __init__.py  interfaces.py  manager.py
src/engine/engine/database/relational/: __init__.py  interfaces.py  session.py  transaction.py
src/engine/engine/domain/: __init__.py
src/engine/engine/domain/api_key/: __init__.py  exceptions.py  interfaces.py  schemas.py
src/engine/engine/domain/common/: __init__.py  exceptions.py  interfaces.py  schemas.py
src/engine/engine/domain/machine/: __init__.py  exceptions.py  interfaces.py  schemas.py
src/engine/engine/infrastructure/: __init__.py  connection_manager.py
src/engine/engine/repositories/: __init__.py  api_key.py  cached_api_key.py  machine.py  raw_telemetry.py  telemetry_analysis.py
src/worker/: pyproject.toml
(+21 files in other folders)
