[project]
name = "epoch-api"
version = "0.1.0"
description = "High-throughput asynchronous API gateway for telemetry ingestion and edge validation."
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv.sources]
epoch-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
